Fixed spacing

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 section {
-    margin-top:30px;
+    margin-top:50px;
 }
 
 #Contact {
